remove example posts and add information about myself

--- a/src/content/info/about.mdx
+++ b/src/content/info/about.mdx
@@ -1,7 +1,11 @@
-# Blog template
+Hey there!
 
-Minimalistic but opinionated blog template using [astro](https://astro.build/) and [svelte](https://svelte.dev/). aims to be super easy to deploy and use, with a focus on performance and SEO, ease-of-use and design (see all [features here](posts/features)).
+# I am Jakub Tokarzewski 👋
 
-This blog doubles as a tutorial on how to use this template, start by [setting up your github repo](posts/how-to-use), then [add some content](posts/adding-content). For more information read about [supported markdown features here](posts/markdown-style-guide).
+I’m a frontend developer with a passion for crafting smooth, high-performance web experiences. Over the years, I’ve worked with React, Typescript, and a bunch of other cool tech to build scalable and efficient applications. I love diving into performance optimization, accessibility, and testing—because great apps should be fast, inclusive, and rock-solid!
 
-Check out the [source code here](https://github.com/flo-bit/blog-template)
+I have experience leading teams and designing the architecture of large-scale applications using micro frontends and custom-built npm packages.
+
+When I’m not coding, you’ll probably find me out sailing, watching Formula 1, or geeking out over the latest frontend trends.
+
+Want to collaborate? <a href="mailto:kuba.tokarzewski@gmail.com">Let’s connect!</a> 🚀
